<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="back"><![CDATA[
        <-
        ]]></string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="modulo">%</string>
    <string name="dzero">00</string>
    <string name="error">ERROR</string>
    <string name="undefined">Result is undefined</string>
    <string name="divideByZero">Cannot Divide By Zero</string>
    <string name="about_us">About Us</string>
    <string name="about_heading">ABOUT US</string>
    <string name="visit_us">visit us</string>
    <string name="website">www.jdshah.com</string>
    <string name="emailID">shahjainamj8657@gmail.com</string>
    <string name="logo">logo</string>
    <string name="calculator">CALCULATOR</string>
    <string name="appDescription">Version 1.0\nCopyright(c) JS APP 2019.\nAll rights reserved.</string>
    <string name="history">History</string>
    <string name="clear_history">Clear History</string>
</resources>
