<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_5sdp"
    android:paddingBottom="@dimen/_5sdp"
    android:paddingLeft="@dimen/_5sdp"
    android:paddingRight="@dimen/_5sdp"
    android:background="#1d1818"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result"
                android:background="@color/textViewColor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="bottom|right"
                android:textSize="@dimen/ansSize"
                android:textColor="@color/colorBlack"
                android:text="@string/zero"
                android:padding="@dimen/_5sdp"
                android:textIsSelectable="false"/>

            <LinearLayout
                android:id="@+id/layer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clear"
                    android:text="@string/clear"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number" />

                <Button
                    android:id="@+id/divide"
                    android:text="@string/divide"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="operatorListener" />

                <Button
                    android:id="@+id/multiply"
                    android:text="@string/multiply"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="operatorListener" />

                <Button
                    android:id="@+id/back"
                    android:text="@string/back"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/number" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/seven"
                    android:text="@string/seven"
                    android:textSize="@dimen/btnText"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/number"
                    android:onClick="numericListener" />

                <Button
                    android:id="@+id/eight"
                    android:text="@string/eight"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="numericListener" />

                <Button
                    android:id="@+id/nine"
                    android:text="@string/nine"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="numericListener" />

                <Button
                    android:id="@+id/minus"
                    android:text="@string/minus"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="operatorListener" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/four"
                    android:text="@string/four"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="numericListener" />

                <Button
                    android:id="@+id/five"
                    android:text="@string/five"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="numericListener" />

                <Button
                    android:id="@+id/six"
                    android:text="@string/six"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="numericListener" />

                <Button
                    android:id="@+id/plus"
                    android:text="@string/plus"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="operatorListener" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/one"
                    android:text="@string/one"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="numericListener" />

                <Button
                    android:id="@+id/two"
                    android:text="@string/two"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="numericListener" />

                <Button
                    android:id="@+id/three"
                    android:text="@string/three"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="numericListener" />

                <Button
                    android:id="@+id/modulo"
                    android:text="@string/modulo"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:background="@drawable/number"
                    android:onClick="operatorListener" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layer5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/zero"
                    android:text="@string/zero"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/number"
                    android:onClick="numericListener"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/dot"
                    android:text="@string/dot"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/number"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/equal"
                    android:text="@string/equal"
                    android:textSize="@dimen/btnText"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/equal"
                    android:layout_weight="2" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>